Fixed A bug with adding huge tasks
Fixed the bug where if you added big task it would go out of bounds

--- a/style.css
+++ b/style.css
@@ -79,9 +79,6 @@ ul {
 }
 
 li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin: 20px 0;
   padding: 15px;
   background-color: #f9f9f9;
